[package]
name = "bigbang"
version = "0.0.5"
authors = ["Alex <alex@alex-hansen.com>"]
license = "MIT"
description = "An optimized framework for n-(hard)-body gravitational simulation"
repository = "https://github.com/sezna/bigbang"
keywords = ["nbody", "gravity", "simulation"]
categories = ["simulation"]
exclude = ["test_files/*"]
readme = "README.md"
documentation = "https://docs.rs/bigbang"

[dependencies]
rand = "0.7.0"
either = "1.5"
rayon = "1.2.0"
[features]
nightly = []    
[lib]
crate-type = ["cdylib", "lib", "staticlib"]
