[package]
name = "bigbang"
version = "0.0.6"
authors = ["Alex <alex@alex-hansen.com>"]
license = "MIT"
description = "An optimized framework for n-(hard)-body gravitational simulation"
repository = "https://github.com/sezna/bigbang"
keywords = ["nbody", "gravity", "simulation"]
categories = ["simulation"]
exclude = ["test_files/*"]
readme = "README.md"
documentation = "https://docs.rs/bigbang"

[dependencies]
rand = "0.7.0"
either = "1.5"
rayon = "1.2.0"
[dev-dependencies]
iron = "0.6.0"
router = "0.6.0"
staticfile = "0.5.0"
serde_derive = "1.0.100"
serde = "1.0.100"
mount = "0.4.0"
serde_json = "1.0.40"
persistent = "0.4.0"
chrono = "0.4"
lazy_static = "1.4.0"
iron-cors = "0.8.0"
[features]
nightly = []    
[lib]
crate-type = ["cdylib", "lib", "staticlib"]

