[package]
edition = "2018"
name = "bigbang"
version = "0.0.9"
authors = ["Alex <alex@alex-hansen.com>"]
license-file = "LICENSE.md"
description = "An optimized framework for n-(hard)-body gravitational simulation"
repository = "https://github.com/sezna/bigbang"
keywords = ["nbody", "gravity", "simulation"]
categories = ["simulation"]
exclude = ["test_files/*"]
readme = "README.md"
documentation = "https://docs.rs/bigbang"

[dependencies]
either = "1.5"
rayon = "1.3"
serde = { version = "1.0", features = ["derive"] }
bigbang_derive = { path = "../bigbang_derive" }
em = { git = "https://github.com/sezna/emu", branch = "quote_fix", optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.7.0"

[features]
gpu = ["em"]

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[[bench]]
name = "theta"
harness = false