[package]
name = "bigbang_examples"
version = "0.1.0"
authors = ["Alex Hansen <alex@42layers.io>"]
edition = "2018"

[[bin]]
name = "websocket_3d_server"
path = "src/websocket_3d/server.rs"

[[bin]]
name = "2d_js"
path = "src/2d_js/main.rs"

[[bin]]
name = "basic_simulation"
path = "src/basic_simulation/main.rs"


[dependencies]
bigbang = { path = "../bigbang" }
iron = "0.6"
router = "0.6"
staticfile = "0.5.0"
serde_derive = "1.0.100"
serde = "1.0.100"
mount = "0.4.0"
serde_json = "1.0.40"
lazy_static = "1.4.0"
iron-cors = "0.8.0"
websocket = "0.26.5"
multiqueue = "0.3.2"
tokio = "0.1.22"
tokio-reactor = "0.1.9"
futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }
futures-util = "0.2.1"
log = "0.4.8"
chrono = "0.4.9"
rand = "0.7.0"
